| Summary: | ASTERISK-29029: Voicemail "pollmailboxes"-option not working, bug in function handle_subscribe | ||||
| Reporter: | Karsten Wemheuer (kwemheuer) | Labels: | patch | ||
| Date Opened: | 2020-08-14 04:59:14 | Date Closed: | 2020-08-31 08:51:38 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Applications/app_voicemail | ||
| Versions: | 16.12.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) app_voicemail.c.diff | |||
| Description: | After changing from 16.11 to 16.12 I noticed that the function "pollmailboxes" is no longer functional.
During the search I found the error in function "handle_subscribe". | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2020-08-14 04:59:16.043-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Karsten Wemheuer (kwemheuer) 2020-08-14 05:05:01.893-0500 With this small patch the bug can be fixed. Up to release 16.11. the codeline at this place was: strcat(mwi_sub->mailbox, p->context); By: Kevin Harwell (kharwell) 2020-08-14 13:43:07.946-0500 [~kwemheuer] would you be willing to push your patch up to gerrit for review? By: Karsten Wemheuer (kwemheuer) 2020-08-14 14:50:48.883-0500 Yeah, I can do that. Unfortunately, I have little experience with Git and Gerrit, so it will take some time By: Kevin Harwell (kharwell) 2020-08-14 15:24:31.662-0500 Very good and thanks! If you haven't already seen it we have a wiki page that should help get you started [1]. If you run into any problems just post here, or on #asterisk-dev. [1] https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Karsten Wemheuer (kwemheuer) 2020-08-15 07:23:56.019-0500 I do some work with gerrit pushing th patch for review, but I am not sure doing it right. By: Karsten Wemheuer (kwemheuer) 2020-08-17 10:51:16.140-0500 I see some comments on the patch in gerrit. Are they addressed to me and how should I react on these? Sorry, I am not familiar with the process. By: Kevin Harwell (kharwell) 2020-08-17 11:12:38.211-0500 Many thanks for putting the patch up! Usually most comments on a review are directed toward the patch creator (submitter/uploader). In this case however some are directed toward me. [~rmudgett] has found a couple of other problematic areas with the original "gcc" patch I had created. Those too should be fixed. You can either address, and fix all comments and re-upload the patch: 1) on the same branch with your current patch, fix the code based on the comments given 2) using git add and commit locally. Use 'git commit --amend' in order to apply the commit to the current commit. 3) then push to gerrit with git review again Or if you just want to address comments about your patch only, and don't want to fix up the other items then leave those and I'll fix them up myself. Hope that helps By: Karsten Wemheuer (kwemheuer) 2020-08-20 05:48:48.585-0500 Maybe I've done something wrong. I have corrected and uploaded the patch. But this is some time ago. Have I done a mistake? By: Joshua C. Colp (jcolp) 2020-08-20 05:52:42.090-0500 There is no mistake, the patch has been updated. It is now in queue to be reviewed again and looked at. By: Michael Keuter (mkeuter) 2020-08-20 07:30:40.607-0500 That patch in Gerrit works fine for me in 16.13.0-rc1. By: Friendly Automation (friendly-automation) 2020-08-31 08:51:39.269-0500 Change 14812 merged by Friendly Automation: app_voicemail: Fix pollmailboxes [https://gerrit.asterisk.org/c/asterisk/+/14812|https://gerrit.asterisk.org/c/asterisk/+/14812] By: Friendly Automation (friendly-automation) 2020-08-31 08:52:09.854-0500 Change 14861 merged by Friendly Automation: app_voicemail: Fix pollmailboxes [https://gerrit.asterisk.org/c/asterisk/+/14861|https://gerrit.asterisk.org/c/asterisk/+/14861] By: Friendly Automation (friendly-automation) 2020-08-31 08:56:23.968-0500 Change 14832 merged by Friendly Automation: app_voicemail: Fix pollmailboxes [https://gerrit.asterisk.org/c/asterisk/+/14832|https://gerrit.asterisk.org/c/asterisk/+/14832] By: Friendly Automation (friendly-automation) 2020-08-31 08:57:47.153-0500 Change 14862 merged by Joshua Colp: app_voicemail: Fix pollmailboxes [https://gerrit.asterisk.org/c/asterisk/+/14862|https://gerrit.asterisk.org/c/asterisk/+/14862] | ||||